<resources>
    <string name="app_name">Let\'s Meet</string>


    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_people">Find people</string>
    <string name="nav_drawer_item_photos">Photos</string>
    <string name="nav_drawer_item_communities">Communities</string>
    <string name="nav_drawer_item_pages">Pages</string>
    <string name="nav_drawer_item_hot">What\'s hot</string>

    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>







    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>



    <string name="hello_world">Hello world!</string>
    <string name="openDrawer">OPEN</string>
    <string name="closeDrawer">CLOSED</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="Search">Szukaj</string>
    <string name="hint1">Chce iść na krę...</string>
    <string name="Events">Wydarzenia</string>
    <string name="addEvent">Dodaj wydarzenie</string>
    <string name="Settings">Ustawienia</string>
    <string name="Logout">Wyloguj</string>
    <string name="Places">Lokale</string>
    <string name="password">Hasło...</string>
    <string name="password_hint">Hasło...</string>
    <!--<string name="login_hint">Login...</string>-->
    <!--<string name="login_button">Zaloguj</string>-->
    <!--<string name="register_button">Zarejestruj</string>-->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login_fail">Nieprawidłwy login. Spróbuj ponownie.</string>
    <string name="title_activity_testctivity">testctivity</string>
    <string name="old_password_hint">Stare hasło...</string>
    <string name="new_password_hint">Nowe hasło...</string>
    <string name="repeat_new_password_hint">Powtórz hasło...</string>
    <string name="change_button">Zmień</string>
    <string name="site">http://letsmeet.world</string>
    <string name="c_id">;TLQO0gF2DW6O5_J2jWQt8H!DKowF3EpRfV8RQDh</string>
    <string name="ss">fSOa;H3a_qZ70vYhljGmqfgmSvmgL@tWU@wRO@1Nr7Fo8wmF;cm6n491dv37Ga5ycbebzvP=rV;-uVdlBmhxIyDr9jMpiZprrAwgDqh2.EhiYbKju4COQE28T=.e2CRS</string>
    <string name="drawerOpen">open</string>
    <string name="drawerClose">close</string>


    <!-- FRAGMENT REGISTER -->
    <string name="FragmentRegisterHintName">Wpisz imię</string>
    <string name="FragmentRegisterHintSurname">Wpisz nazwisko</string>
    <string name="FragmentRegisterHintMail">Wpisz mail</string>
    <string name="FragmentRegisterHintPassword">Wpisz hasło</string>
    <string name="FragmentRegisterHintRepeatPassword">Powtórz hasło</string>
    <string name="FragmentRegisterButtonRegister">Zarejestruj</string>
    <string name="FragmentRegisterOrTextView">lub</string>
    <string name="FragmentRegisterButtonRegisterGoogle">Połącz z kontem Google</string>
    <!-- FRAGMENT EVENT ADD -->
    <string name="FragmentEventAddHintName">Nazwa ...</string>
    <string name="FragmentEventAddHintCategory">Kategoria ...</string>
    <string name="FragmentEventAddHintDate">Data ...</string>
    <string name="FragmentEventAddHintPlace">Miejsce ...</string>
    <string name="FragmentEventAddHintAddress">Adres ...</string>
    <string name="FragmentEventAddHintParticipantsNumber">Ilość osób ...</string>
    <string name="FragmentEventAddCheckBox">wydarzenie prywatne</string>
    <string name="FragmentEventAddButtonAdd">Dodaj ...</string>
    <!-- FRAGMENT ACCOUNT -->
    <string name="FragmentAccountButtonChangeAvatar">Zmień</string>
    <string name="FragmentAccountButtonRemoveAvatar">Usuń</string>
    <string name="FragmentAccountNameHint">Imię ...</string>
    <string name="FragmentAccountSurnameHint">Nazwisko ...</string>
    <string name="FragmentAccountPhoneHint">Telefon ...</string>
    <string name="FragmentAccountPlaceHint">Miejscowość</string>
    <string name="FragmentAccountSaveButton">Zapisz</string>
    <string name="FragmentAccountMailHint">Email ...</string>
    <string name="FragmentChangePasswordHint">Stare hasło ...</string>
    <string name="FragmentChangePassword">Nowe hasło</string>
    <string name="FragmentChangeButtonChange">Zmień</string>
    <string name="FragmentSearchButtonSearch">Szukaj</string>
    <string name="FragmentSearchFieldSearch">Chcę iść na ...</string>
    <!-- FRAGMENT CHANGE PASSWORD -->
    <!-- FRAGMENT LOGIN -->
    <string name="FragmentLoginMailHint">Login...</string>
    <string name="FragmentLoginButtonLogin">Zaloguj</string>
    <string name="FragmentLoginButtonRegister">Zarejestruj</string>
    <string name="FragmentLoginPasswordHint">Password...</string>
    <string name="EventDetailsOrganizerMakeCall">Zadzwoń</string>
    <string name="EventDetailsOrganizerWriteMail">Napisz</string>
    <string name="EventDetailsJoin">Dołącz</string>
    <string name="EventDetailsLocationTitle">Lokalizacja</string>
    <string name="EventDetailsOrganizerTitle">Organizator</string>


</resources>
