<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/logo"
            android:title="@string/nav_drawer_item_home"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/logo"
            android:title="@string/nav_drawer_item_people"/>
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/logo"
            android:title="@string/nav_drawer_item_photos"/>
        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/logo"
            android:title="@string/nav_drawer_item_communities"/>
        <item
            android:id="@+id/navigation_item_5"
            android:icon="@drawable/logo"
            android:title="@string/nav_drawer_item_pages"/>
        <item
            android:id="@+id/navigation_item_6"
            android:icon="@drawable/logo"
            android:title="@string/nav_drawer_item_hot"/>

    </group>

</menu>